added minio cloud server for images